<resources>
    <string name="app_name">Scaffold</string>

    <string name="submit_btn">submit</string>
    <string name="title_hint">title</string>
    <string name="desc_hint">description</string>
    <string name="submit_history_text">View Submit History</string>
    <string name="submitted_at_label_text">submitted at :</string>
    <string name="title_label_text">title :</string>
    <string name="description_label_text">description :</string>
    <string name="no_history_text">No history</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_hint">password</string>
    <string name="username_hint">username</string>
    <string name="login_btn">login</string>
    <string name="example_btn">mediator</string>
</resources>