<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/feedback_history_date_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/teal_700"
        android:text="@string/submitted_at_label_text" />

    <TextView
        android:id="@+id/feedback_history_title_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/feedback_history_date_label_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/teal_700"
        android:text="@string/title_label_text" />

    <TextView
        android:id="@+id/feedback_history_desc_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/feedback_history_title_label_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/teal_700"
        android:text="@string/description_label_text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/feedback_history_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"/>

    <TextView
        android:id="@+id/feedback_history_date_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/feedback_history_guideline"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        tools:text="asd" />

    <TextView
        android:id="@+id/feedback_history_title_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/feedback_history_date_value_tv"
        app:layout_constraintStart_toStartOf="@id/feedback_history_guideline"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        tools:text="asd" />

    <TextView
        android:id="@+id/feedback_history_desc_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/feedback_history_title_value_tv"
        app:layout_constraintStart_toStartOf="@id/feedback_history_guideline"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        tools:text="asd" />

</androidx.constraintlayout.widget.ConstraintLayout>